Fixed padding again. (#153)
Setting padding on jumbotron was indroducing a horizontal scrollbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -255,13 +255,9 @@ margin-top: 4px;
 }
 
 @media screen and (max-width: 600px) {
-  .jumbotron {
-    padding-left: 6px;
-    padding-right: 6px;
-  }
   .container {
-    padding-left: 6px;
-    padding-right: 6px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
   .page-header {
     font-size: 36px;
